src/objects/PSButtonLauncherKeyValue__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSButtonLauncherItem__c</fullName>
        <label>PSButtonLauncherItem</label>
        <referenceTo>PSButtonLauncherItem__c</referenceTo>
        <relationshipLabel>PSButtonLauncherKeyValues</relationshipLabel>
        <relationshipName>PSButtonLauncherKeyValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PSButtonLauncherKeyValue</label>
    <nameField>
        <displayFormat>BLKV-{000000}</displayFormat>
        <label>PSButtonLauncherKeyValue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSButtonLauncherKeyValues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>